docs/tests/typing/bad/testfile-redef-6.cpp

class S { public: int a; int a; };
int main() {}
